i-dotting and t-crossing

--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -20,14 +20,14 @@
 				<p>He was also much respected by Antigonus, who, whenever he came to Athens, used to attend his lectures, and was constantly inviting him to come to him. But he begged off himself, and sent Persaeus, one of his intimate friends, who was the son of Demetrius and a Citiaean by birth, and who flourished about the hundred and thirtieth olympiad, when Zeno was an old man. The letter of Antigonus to Zeno was as follows, and it is reported by Apollonius the Syrian, in his essay on Zeno.</p>
 				<blockquote epub:type="z3998:letter">
 					<header>
-						<p>King Antigonus to Zeno the Philosopher, Greeting</p>
+						<p epub:type="z3998:salutation">King Antigonus to Zeno the Philosopher, Greeting</p>
 					</header>
 					<p>I think that in good fortune and glory I have the advantage of you; but in reason and education I am inferior to you, and also in that perfect happiness which you have attained to. On which account I have thought it good to address you, and invite you to come to me, being convinced that you will not refuse what is asked of you. Endeavor, therefore, by all means to come to me, considering this fact, that you will not be the instructor of me alone, but of all the Macedonians together. For he who instructs the ruler of the Macedonians, and who leads him in the path of virtue, evidently marshals all his subjects on the road to happiness. For as the ruler is, so is it natural that his subjects for the most part should be also.</p>
 				</blockquote>
 				<p>And Zeno wrote him back the following answer.</p>
 				<blockquote epub:type="z3998:letter">
 					<header>
-						<p>Zeno to King Antigonus, Greeting</p>
+						<p epub:type="z3998:salutation">Zeno to King Antigonus, Greeting</p>
 					</header>
 					<p>I admire your desire for learning, as being a true object for the wishes of mankind, and one too that tends to their advantage. And the man who aims at the study of philosophy has a proper disregard for the popular kind of instruction which tends only to the corruption of the morals. And you, passing by the pleasure which is so much spoken of, which makes the minds of some young men effeminate, show plainly that you are inclined to noble pursuits, not merely by your nature, but also by your own deliberate choice. And a noble nature, when it has received even a slight degree of training, and which also meets with those who will teach it abundantly, proceeds without difficulty to a perfect attainment of virtue. But I now find my bodily health impaired by old age, for I am eighty years old: on which account I am unable to come to you. But I send you some of those who have studied with me, who in that learning which has reference to the soul, are in no respect inferior to me, and in their bodily vigour are greatly my superiors. And if you associate with them you will want nothing that can bear upon perfect happiness.</p>
 				</blockquote>
@@ -268,7 +268,7 @@
 					<p>
 						<span>Do you now go to the sweet stream of Inachus.<a href="endnotes.xhtml#note-85" id="noteref-85" epub:type="noteref">85</a></span>
 						<br/>
-						<span>…</span>
+						<span class="elision">⋮</span>
 					</p>
 				</blockquote>
 				<p>The appellative proposition is one which is used in the case in which when a man says anything, he must address somebody, as for instance:</p>
