--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -109,7 +109,7 @@
 					<p>The Greek is, <i xml:lang="grc">ἐν τῷ πρὸς Ξενοφῶντα ἀποστασίου</i>⁠—“<i xml:lang="grc">ἀποστασίου δίκη</i>, an action against a freedman for having forsaken or slighted his <i xml:lang="grc">προστάτης</i>.”⁠—Liddle &amp; Scott, <i epub:type="se:name.publication.book">Greek Lexicon</i> <a href="book-2.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
-					<p>This is exactly the character that Horace gives of him: <a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a></p>
+					<p>This is exactly the character that Horace gives of him:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Omnis Aristippum decuit color et status et res;</span>
@@ -118,6 +118,9 @@
 						</p>
 						<cite><i epub:type="se:name.publication.book">Epistles</i> <span epub:type="z3998:roman">i</span> 23, 24.</cite>
 					</blockquote>
+					<p>
+						<a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-25" epub:type="endnote">
 					<p>Plutarch, in his life of Pompey, attributes these lines to Sophocles, but does not mention the play in which they occurred. <a href="book-2.xhtml#noteref-25" epub:type="backlink">↩</a></p>
@@ -186,7 +189,7 @@
 					<p>This is a quotation from the Hippolytus of Euripides, <span epub:type="z3998:roman">v</span>. 424. <a href="book-4.xhtml#noteref-41" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-42" epub:type="endnote">
-					<p>I doubt if the wit of these parodies will be appreciated by the modern reader. The lines of Homer, which they are intended to parody, are: <a href="book-4.xhtml#noteref-42" epub:type="backlink">↩</a></p>
+					<p>I doubt if the wit of these parodies will be appreciated by the modern reader. The lines of Homer, which they are intended to parody, are:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>Ὦ μάκαρ Ατρεΐδη, μοιρηγενὲς, ὀλβιοδαίμων</span>
@@ -215,6 +218,9 @@
 							<span>Τῆς ὑπάτης ἔριδος πάντων ἐμπειρότατ᾿ ἀνδρῶν.</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-4.xhtml#noteref-42" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-43" epub:type="endnote">
 					<p>From <i xml:lang="grc">λύω</i>, <i xml:lang="la">solvo</i>, to relax or weaken the limbs. <a href="book-4.xhtml#noteref-43" epub:type="backlink">↩</a></p>
@@ -277,7 +283,7 @@
 					<p>There is a pun here. <i xml:lang="grc">Χείρων</i> is the word used for worse. Chiron was also the most celebrated of the Centaurs, the tutor of Achilles. <a href="book-6.xhtml#noteref-62" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-63" epub:type="endnote">
-					<p>There is a pun intended here; as Diogenes proposed Didymus a fate somewhat similar to that of the beaver. <a href="book-6.xhtml#noteref-63" epub:type="backlink">↩</a></p>
+					<p>There is a pun intended here; as Diogenes proposed Didymus a fate somewhat similar to that of the beaver.</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Cupiens evadere damno</span>
@@ -285,6 +291,9 @@
 							<span>Testiculorum.</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-6.xhtml#noteref-63" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-64" epub:type="endnote">
 					<p>This is taken from Homer, <i epub:type="se:name.publication.poem">Iliad</i> κ, 387. Pope’s Version, 455. <a href="book-6.xhtml#noteref-64" epub:type="backlink">↩</a></p>
@@ -429,7 +438,7 @@
 					<p>Something is evidently wanting here; probably some mention of an earthquake. <a href="book-7.xhtml#noteref-93" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-94" epub:type="endnote">
-					<p>This is similar to Virgil’s description. <a href="book-7.xhtml#noteref-94" epub:type="backlink">↩</a></p>
+					<p>This is similar to Virgil’s description.</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Quinque tenent cœlum zonæ, quarum una corusco</span>
@@ -469,6 +478,9 @@
 						</p>
 						<cite><abbr>l.</abbr> 322.</cite>
 					</blockquote>
+					<p>
+						<a href="book-7.xhtml#noteref-94" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-95" epub:type="endnote">
 					<p>“<i xml:lang="grc">Ὑποτελὶς</i>, a name given by Herillus in Diogenes Laërtius to a man’s natural talents, <abbr>etc.</abbr>, which ought all to be subordinate to the attainment of the chief good.”⁠—Liddle &amp; Scott in <abbr>voc.</abbr> <a href="book-7.xhtml#noteref-95" epub:type="backlink">↩</a></p>
@@ -489,7 +501,7 @@
 					<p>This is parodied from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">iv</span>. 611. Pope’s version, <span epub:type="roman">l</span> 831. <a href="book-7.xhtml#noteref-100" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-101" epub:type="endnote">
-					<p>This is referring to the Stoic doctrine ridiculed by Horace: <a href="book-7.xhtml#noteref-101" epub:type="backlink">↩</a></p>
+					<p>This is referring to the Stoic doctrine ridiculed by Horace:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Si dives qui sapiens est,</span>
@@ -512,6 +524,9 @@
 							<span>Why thus your vows at random fling?</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-7.xhtml#noteref-101" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-102" epub:type="endnote">
 					<p>From <i xml:lang="grc">κρύπτω</i>, to hide, and <i xml:lang="grc">ἵππος</i>, a horse. <a href="book-7.xhtml#noteref-102" epub:type="backlink">↩</a></p>
@@ -520,12 +535,15 @@
 					<p>These lines are from the <i epub:type="se:name.publication.play">Erestes</i> of Euripides, <span epub:type="z3998:roman">v</span>. 247. <a href="book-7.xhtml#noteref-103" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-104" epub:type="endnote">
-					<p>This is a quotation from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">x</span>. 495. Pope’s Version, 586. The Greek here is <i xml:lang="grc">οἷος πέπνυται</i>. The line in Homer stands: <a href="book-7.xhtml#noteref-104" epub:type="backlink">↩</a></p>
+					<p>This is a quotation from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">x</span>. 495. Pope’s Version, 586. The Greek here is <i xml:lang="grc">οἷος πέπνυται</i>. The line in Homer stands:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>οἵῳ πέπνυσθαι⁠—sc: πόρε περσεφόνεια.</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-7.xhtml#noteref-104" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-105" epub:type="endnote">
 					<p>The argument by progression is the sorites. “The arrest” is the method of encountering the sorites, by taking some particular point at which to stop the admissions required by the sorites. <a href="book-7.xhtml#noteref-105" epub:type="backlink">↩</a></p>
@@ -537,7 +555,7 @@
 					<p>See Herodotus <span epub:type="z3998:roman">iv</span> 93. <a href="book-8.xhtml#noteref-107" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-108" epub:type="endnote">
-					<p>This resembles the account which Ovid puts into the mouth of Pythagoras, in the last book of his <i epub:type="se:name.publication.poem">Metamorphoses</i>, where he makes him say: <a href="book-8.xhtml#noteref-108" epub:type="backlink">↩</a></p>
+					<p>This resembles the account which Ovid puts into the mouth of Pythagoras, in the last book of his <i epub:type="se:name.publication.poem">Metamorphoses</i>, where he makes him say:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Morte carent animæ, semperque priore relicta</span>
@@ -579,6 +597,9 @@
 							<span>In Juno’s shrine, a trophy of that war.</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-8.xhtml#noteref-108" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-109" epub:type="endnote">
 					<p>This passage has been interpreted in more ways than one. Casaubon thinks with great probability that there is a hiatus in the text. I have endeavored to extract a meaning out of what remains. Compare <i epub:type="se:name.publication.book">2 Samuel</i> 16:23. “And the counsel of Ahitophel, which he counselled in those days, was as if a man had enquired at the oracle of God; so was all the counsel of Ahitophel both with David and with Absalom.” <a href="book-8.xhtml#noteref-109" epub:type="backlink">↩</a></p>
@@ -590,7 +611,7 @@
 					<p>Charondas was a lawgiver of Catana, who legislated for his own city and the other towns of Chalcidian origin in Magna Grecia, such as Zancle, Naxos, Leontini, Euboea, Mylae, Himera, Callipolis, and Rhegium. His laws have not been preserved to us, with the exception of a few judgments. They were probably in verse, for Athenaeus says that they were sung in Athens at banquets. Aristotle tells us that they were adapted to an aristocracy. It is much doubted whether it is really true that he was a disciple of Pythagoras, though we are not sure of his exact time, so that we cannot pronounce it as impossible as in the preceding case. He must have lived before the time of Anaxilaus, tyrant of Rhegium, who reigned from <abbr class="era">BC</abbr> 494 to <abbr class="era">BC</abbr> 476, because he abolished the laws of Charondas, which had previously been in force in that city. Diodorus gives a code of laws which he states that Charondas gave to the city of Thurii, which was not founded till <abbr class="era">BC</abbr> 443, when he must certainly have been dead a long time. There is one law of his preserved by Stobaeus, which is probably authentic, since it is found in a fragment of Theophrastus; enacting that all buying and selling shall be transacted by ready money only. <a href="book-8.xhtml#noteref-111" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-112" epub:type="endnote">
-					<p>This doctrine is alluded to doubtfully by Virgil, <i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">i</span>247. <a href="book-8.xhtml#noteref-112" epub:type="backlink">↩</a></p>
+					<p>This doctrine is alluded to doubtfully by Virgil, <i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">i</span>247.</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Illic, ut perhibent, aut intempesta silet nox</span>
@@ -620,6 +641,9 @@
 							<span>Red Vesper kindles there the tapers of the night.</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-8.xhtml#noteref-112" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-113" epub:type="endnote">
 					<p><i xml:lang="grc">νοῦς</i> appears, in a division like this, to be the deliberative part of the mind; <i xml:lang="grc">φρὴν</i>, the rational part of the intellect: <i xml:lang="grc">θυμὸς</i>, that part with which the passions are concerned. <a href="book-8.xhtml#noteref-113" epub:type="backlink">↩</a></p>
@@ -634,7 +658,7 @@
 					<p>It is impossible to give the force of this epigram in any other language. It is a pun on <i xml:lang="grc">Ἄκρων</i>, <i xml:lang="grc">Ἀκράγας</i>, and <i xml:lang="grc">ἄκρος</i>. The last word meaning not only <i>high</i>, <i>lofty</i>, but also <i>eminent</i>, <i>very skillful</i>. The plain English would be: “The lofty height of a most eminent country conceals Acron, a skillful physician of Acragas, the son of a skillful father.” The variation would be: “A high tomb on a very high summit, conceals,” <abbr>etc.</abbr> <a href="book-8.xhtml#noteref-116" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-117" epub:type="endnote">
-					<p>This story is mentioned by Horace: <a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a></p>
+					<p>This story is mentioned by Horace:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span class="i2">Siculique poetæ,</span>
@@ -647,6 +671,9 @@
 						</p>
 						<cite><i epub:type="se:name.publication.poem">Ars Poetica</i>, 466.</cite>
 					</blockquote>
+					<p>
+						<a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-118" epub:type="endnote">
 					<p>This is slightly parodied from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">xi</span>. 278. Pope’s Version, 337. <a href="book-8.xhtml#noteref-118" epub:type="backlink">↩</a></p>
@@ -685,12 +712,15 @@
 					<p>Namely, reasoning well, expressing oneself well, and acting well. <a href="book-9.xhtml#noteref-129" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-130" epub:type="endnote">
-					<p>This is thus embodied by Lucretius: <a href="book-9.xhtml#noteref-130" epub:type="backlink">↩</a></p>
+					<p>This is thus embodied by Lucretius:</p>
 					<blockquote epub:type="z3998:verse" xml:lang="la">
 						<p>
 							<span>Nam nihil e nihilo, in nihilum nîl posse reverti.</span>
 						</p>
 					</blockquote>
+					<p>
+						<a href="book-9.xhtml#noteref-130" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-131" epub:type="endnote">
 					<p>Homer, <i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">v</span>, 340. Pope’s version, 422. <a href="book-9.xhtml#noteref-131" epub:type="backlink">↩</a></p>
@@ -705,7 +735,7 @@
 					<p>Homer, <i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">xx</span>, 248. Pope’s version, 294. <a href="book-9.xhtml#noteref-134" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-135" epub:type="endnote">
-					<p>There is too remarkable a similarity in this to Campbell’s lines: <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
+					<p>There is too remarkable a similarity in this to Campbell’s lines:</p>
 					<blockquote epub:type="z3998:verse">
 						<p>
 							<span>’Tis distance lends enchantment to the view,</span>
@@ -713,7 +743,7 @@
 							<span>And robes the mountains in their azure hue:</span>
 						</p>
 					</blockquote>
-					<p>to allow one to pass it over without pointing it out.</p>
+					<p>to allow one to pass it over without pointing it out. <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-136" epub:type="endnote">
 					<p>“Diogenes here appears (though he gives no intimation of his doing so) to be transcribing the reasonings of someone of the Skeptics.” ―French Translator <a href="book-9.xhtml#noteref-136" epub:type="backlink">↩</a></p>
