--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -303,10 +303,10 @@
 									<a href="text/book-9.xhtml#part-9-10">Anaxarchus</a>
 								</li>
 								<li>
-									<a href="text/book-9.xhtml#part-9-10">Life of Pyrrho</a>
+									<a href="text/book-9.xhtml#part-9-11">Pyrrho</a>
 								</li>
 								<li>
-									<a href="text/book-9.xhtml#part-9-11">Timon</a>
+									<a href="text/book-9.xhtml#part-9-12">Timon</a>
 								</li>
 							</ol>
 						</li>
