--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -598,14 +598,14 @@
 				<p>Plato wrote his letters to him; as he had begun the correspondence by writing himself to Plato, which he did in the following manner:</p>
 				<blockquote epub:type="z3998:letter">
 					<header>
-						<p>Archytas to Plato, Greeting</p>
+						<p epub:type="z3998:salutation">Archytas to Plato, Greeting</p>
 					</header>
 					<p>I am very glad that you have recovered from your delicate state of health; for you yourself have sent me word of your recovery, and Lamiscus gives the same account. I have been much occupied with some commentaries, and have been among the Lucanians, and have met with the descendants of Ocellus. I have now in my possession, and I send to you the treatises on Law, and Kingly Power, and Piety, and the Creation of the Universe. As for the rest, I have not been able to find them, but whenever I do find any, I will send them to you.</p>
 				</blockquote>
 				<p>Thus wrote Archytas. And Plato sent him an answer in the following terms:</p>
 				<blockquote epub:type="z3998:letter">
 					<header>
-						<p>Plato to Archytas, Greeting</p>
+						<p epub:type="z3998:salutation">Plato to Archytas, Greeting</p>
 					</header>
 					<p>I was exceedingly glad to receive the Commentaries which came from you, and I have admired their author in the greatest possible degree; and he seems to us to be a man worthy of his ancient ancestors. For they are said to have been originally natives of Myra; and to have been among the Trojans, whom Laomedon took with him, gallant men, as the story handed down by tradition attests. As for my Commentaries which you ask me for, they are not yet completed, but such as they are I send them to you. And on the propriety of taking care of such things we are both agreed, so that I have no need to impress anything on you on that head. Farewell.</p>
 				</blockquote>
