em-dashes in cite tags

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -10,13 +10,13 @@
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="endnote">
-					<p>“The religion of the ancient Persians was the worship of fire or of the elements, in which fire was symbolical of the Deity. At a later period, in the time of the Greeks, the ancient worship was changed into the adoration of the stars (Sabaeism), especially of the sun and of the morning star. This religion was distinguished by a simple and majestic character. Its priests were called Magi.” <cite>Tenneman’s <i epub:type="se:name.publication.book">Manual of the History of Philosophy</i>, Introduction §70</cite> <a href="book-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p>“The religion of the ancient Persians was the worship of fire or of the elements, in which fire was symbolical of the Deity. At a later period, in the time of the Greeks, the ancient worship was changed into the adoration of the stars (Sabaeism), especially of the sun and of the morning star. This religion was distinguished by a simple and majestic character. Its priests were called Magi.” <cite>—Tenneman’s <i epub:type="se:name.publication.book">Manual of the History of Philosophy</i>, Introduction §70</cite> <a href="book-1.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>“The Chaldaeans were devoted to the worship of the stars and to astrology; the nature of their climate and country disposing them to it. The worship of the stars was revived by them and widely disseminated even subsequently to the Christian era.” <cite>Tenneman’s <i epub:type="se:name.publication.book">Manual of the History of Philosophy</i>, Introduction §71</cite> <a href="book-1.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>“The Chaldaeans were devoted to the worship of the stars and to astrology; the nature of their climate and country disposing them to it. The worship of the stars was revived by them and widely disseminated even subsequently to the Christian era.” <cite>—Tenneman’s <i epub:type="se:name.publication.book">Manual of the History of Philosophy</i>, Introduction §71</cite> <a href="book-1.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
-					<p>“Cicero speaks of those who in India are accounted philosophers, living naked and enduring the greatest severity of winter without betraying any feeling of pain, and displaying the same insensibility when exposed to the flames.” <cite><i epub:type="se:name.publication.book">Tusculan Disputations</i> <span epub:type="z3998:roman">v</span> 27</cite> <a href="book-1.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					<p>“Cicero speaks of those who in India are accounted philosophers, living naked and enduring the greatest severity of winter without betraying any feeling of pain, and displaying the same insensibility when exposed to the flames.” <cite>—<i epub:type="se:name.publication.book">Tusculan Disputations</i> <span epub:type="z3998:roman">v</span> 27</cite> <a href="book-1.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
 					<p>“The religion of the Britons was one of the most considerable parts of their government, and the Druids who were their priests, possessed great authority among them. Besides ministering at the altar, and directing all religious duties, they presided over the education of youth; they possessed both the civil and criminal jurisdiction, they decided all controversies among states as well as among private persons, and whoever refused to submit to their decree was exposed to the most severe penalties. The sentence of excommunication was pronounced against him; he was forbidden access to the sacrifices of public worship; he was debarred all intercourse with his fellow citizens even in the common affairs of life: his company was universally shunned as profane and dangerous, he was refused the protection of law, and death itself became an acceptable relief from the misery and infamy to which he was exposed. Thus the bonds of government, which were naturally loose among that rude and turbulent people, were happily corroborated by the terrors of their superstition.</p>
@@ -38,7 +38,7 @@
 							<br/>
 							<span>Discerptum latos juvenem sparsere per agros.</span>
 						</p>
-						<cite><i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">iv</span> 520</cite>
+						<cite>—<i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">iv</span> 520</cite>
 					</blockquote>
 					<p>Which Dryden translates⁠—</p>
 					<blockquote epub:type="z3998:verse">
@@ -116,7 +116,7 @@
 							<br/>
 							<span>Tentantem majora, fere præsentibus æequum.</span>
 						</p>
-						<cite><i epub:type="se:name.publication.book">Epistles</i> <span epub:type="z3998:roman">i</span> 23, 24.</cite>
+						<cite>—<i epub:type="se:name.publication.book">Epistles</i> <span epub:type="z3998:roman">i</span> 23, 24.</cite>
 					</blockquote>
 					<p>
 						<a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a>
@@ -194,13 +194,13 @@
 						<p>
 							<span>Ὦ μάκαρ Ατρεΐδη, μοιρηγενὲς, ὀλβιοδαίμων</span>
 						</p>
-						<cite><i epub:type="se:name.publication.poem">Iliad</i> 3, 182.</cite>
+						<cite>—<i epub:type="se:name.publication.poem">Iliad</i> 3, 182.</cite>
 					</blockquote>
 					<blockquote epub:type="z3998:verse" xml:lang="grc">
 						<p>
 							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ᾿ ἀνδρῶν</span>
 						</p>
-						<cite><i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
+						<cite>—<i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
 					</blockquote>
 					<p>The first of which is translated by Pope:</p>
 					<blockquote epub:type="z3998:verse">
@@ -390,7 +390,7 @@
 							<br/>
 							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
 						</p>
-						<cite><i epub:type="se:name.publication.poem">Opera et Dies</i> 293.</cite>
+						<cite>—<i epub:type="se:name.publication.poem">Opera et Dies</i> 293.</cite>
 					</blockquote>
 					<blockquote epub:type="z3998:verse">
 						<p>
@@ -455,7 +455,7 @@
 							<br/>
 							<span>Obliquus qua se signorum verteret ordo.</span>
 						</p>
-						<cite><i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">I</span> 233.</cite>
+						<cite>—<i epub:type="se:name.publication.poem">Georgics</i> <span epub:type="z3998:roman">I</span> 233.</cite>
 					</blockquote>
 					<p>There is no part of Dryden’s translation superior to that of this passage.</p>
 					<blockquote epub:type="z3998:verse">
@@ -476,7 +476,7 @@
 							<br/>
 							<span>Which the twelve signs in beauteous order sway.</span>
 						</p>
-						<cite><abbr>l.</abbr> 322.</cite>
+						<cite>—<abbr>l.</abbr> 322.</cite>
 					</blockquote>
 					<p>
 						<a href="book-7.xhtml#noteref-94" epub:type="backlink">↩</a>
@@ -510,7 +510,7 @@
 							<br/>
 							<span>Cur optas quod habes?</span>
 						</p>
-						<cite>Horace, <i epub:type="se:name.publication.poem">Satires</i> <span epub:type="z3998:roman">i</span> 130.</cite>
+						<cite>—Horace, <i epub:type="se:name.publication.poem">Satires</i> <span epub:type="z3998:roman">i</span> 130.</cite>
 					</blockquote>
 					<p>Which may be translated:</p>
 					<blockquote epub:type="z3998:verse">
@@ -669,7 +669,7 @@
 							<br/>
 							<span>Insiluit.</span>
 						</p>
-						<cite><i epub:type="se:name.publication.poem">Ars Poetica</i>, 466.</cite>
+						<cite>—<i epub:type="se:name.publication.poem">Ars Poetica</i>, 466.</cite>
 					</blockquote>
 					<p>
 						<a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a>
