--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/57342">Project Gutenberg</a><br/>
 			and on digital scans available at<br/>
-			<a href="https://www.google.com/books/edition/The_lives_and_opinions_of_eminent_philos/1sEIAAAAQAAJ">Google Books</a>.</p>
+			<a href="https://books.google.com/books?id=1sEIAAAAQAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Saint Jerome</i>,<br/>
 			a painting completed around 1621 by<br/>
