--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -82,7 +82,7 @@
 					<p>A drachma was something less than ten pence. <a href="book-1.xhtml#noteref-14" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-15" epub:type="endnote">
-					<p>“<i xml:lang="grc">Ἔνη καὶ νέα</i> the last day of the month: elsewhere <i xml:lang="grc">τριανιὰς</i>. So called for this reason. The old Greek year was lunar; now the moon’s monthly orbit is twenty-nine and a half days. So that if the first month began with the sun and moon together at sunrise, at the month’s end it would be sunset; and the second month would begin at sunset. To prevent this irregularity, Solon made the latter half day belong to the first month; so that this thirtieth day consisted of two halves, one belonging to the old, the other to the new moon. And when the lunar month fell into disuse, the last day of the calendar month was still called <i xml:lang="grc">Ἔνη καὶ νέα</i>.” <cite>—Liddle &amp; Scott <i epub:type="se:name.publication.book">Greek Lexicon</i>, in <span epub:type="z3998:roman">v</span>, <i xml:lang="grc">ἔνος</i></cite> <a href="book-1.xhtml#noteref-15" epub:type="backlink">↩</a></p>
+					<p>“<i xml:lang="grc">Ἔνη καὶ νέα</i> the last day of the month: elsewhere <i xml:lang="grc">τριανιὰς</i>. So called for this reason. The old Greek year was lunar; now the moon’s monthly orbit is twenty-nine and a half days. So that if the first month began with the sun and moon together at sunrise, at the month’s end it would be sunset; and the second month would begin at sunset. To prevent this irregularity, Solon made the latter half day belong to the first month; so that this thirtieth day consisted of two halves, one belonging to the old, the other to the new moon. And when the lunar month fell into disuse, the last day of the calendar month was still called <i xml:lang="grc">Ἔνη καὶ νέα</i>.” <cite>—Liddle and Scott <i epub:type="se:name.publication.book">Greek Lexicon</i>, in <span epub:type="z3998:roman">v</span>, <i xml:lang="grc">ἔνος</i></cite> <a href="book-1.xhtml#noteref-15" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-16" epub:type="endnote">
 					<p>Herodotus mentions the case of Periander’s children, <span epub:type="z3998:roman">iii</span> 50, and the death of his wife, and his burning the clothes of all the Corinthian women, <span epub:type="z3998:roman">v</span> 92. <a href="book-1.xhtml#noteref-16" epub:type="backlink">↩</a></p>
@@ -106,7 +106,7 @@
 					<p>Grote gives good reasons for disbelieving this. <a href="book-2.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
-					<p>The Greek is, <i xml:lang="grc">ἐν τῷ πρὸς Ξενοφῶντα ἀποστασίου</i>⁠—“<i xml:lang="grc">ἀποστασίου δίκη</i>, an action against a freedman for having forsaken or slighted his <i xml:lang="grc">προστάτης</i>.” <cite>—Liddle &amp; Scott, <i epub:type="se:name.publication.book">Greek Lexicon</i></cite> <a href="book-2.xhtml#noteref-23" epub:type="backlink">↩</a></p>
+					<p>The Greek is, <i xml:lang="grc">ἐν τῷ πρὸς Ξενοφῶντα ἀποστασίου</i>⁠—“<i xml:lang="grc">ἀποστασίου δίκη</i>, an action against a freedman for having forsaken or slighted his <i xml:lang="grc">προστάτης</i>.” <cite>—Liddle and Scott, <i epub:type="se:name.publication.book">Greek Lexicon</i></cite> <a href="book-2.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
 					<p>This is exactly the character that Horace gives of him:</p>
@@ -148,7 +148,7 @@
 					<p>The Greek is a parody on the descriptions of Tantalus and Sisyphus. Homer, <i epub:type="se:name.publication.book">Odyssey</i> <span epub:type="z3998:roman">ii</span>, 581, 592. See also, Dryden’s Version, B <span epub:type="z3998:roman">ii</span>, 719. <a href="book-2.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p>The Greek is <i xml:lang="grc">τοῦ μιμογράφου</i>. “A <em>mime</em> was a kind of prose drama, intended as a familiar representation of life and character, without any distinct plot. It was divided into <i xml:lang="grc">μῖμιοι ἀνδρεῖοι</i> and <i xml:lang="grc">γυναικεῖοι</i>, also into <i xml:lang="grc">μῖμοι σπουδαίων</i> and <i xml:lang="grc">γελοίων</i>.” <cite>—Liddle &amp; Scott in <abbr>voc.</abbr> <i xml:lang="grc">μῖμος</i></cite> <a href="book-3.xhtml#noteref-31" epub:type="backlink">↩</a></p>
+					<p>The Greek is <i xml:lang="grc">τοῦ μιμογράφου</i>. “A <em>mime</em> was a kind of prose drama, intended as a familiar representation of life and character, without any distinct plot. It was divided into <i xml:lang="grc">μῖμιοι ἀνδρεῖοι</i> and <i xml:lang="grc">γυναικεῖοι</i>, also into <i xml:lang="grc">μῖμοι σπουδαίων</i> and <i xml:lang="grc">γελοίων</i>.” <cite>—Liddle and Scott in <abbr>voc.</abbr> <i xml:lang="grc">μῖμος</i></cite> <a href="book-3.xhtml#noteref-31" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-32" epub:type="endnote">
 					<p>The Greek is, <i xml:lang="grc">ὡς ἀνέπλαττε Πλάτων πεπλασμένα θαύματα εἰδώς</i>. <a href="book-3.xhtml#noteref-32" epub:type="backlink">↩</a></p>
@@ -235,7 +235,7 @@
 					<p>This very spirited version I owe to the kindness of my brother, the <abbr>Rev.</abbr> <abbr class="name">J. E.</abbr> Yonge, of Eton College. <a href="book-5.xhtml#noteref-46" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-47" epub:type="endnote">
-					<p>“<i xml:lang="grc">ἐντελέχεια</i>, the actuality of a thing, as opposed to simple capability or potentiality (<i xml:lang="grc">δύναμις</i>); a philosophic word invented by Aristotle.⁠— … quite distinct from <i xml:lang="grc">ἐνδελέχεια</i>, though Cicero (<i epub:type="se:name.publication.book">Tusculan Disputations</i> <span epub:type="z3998:roman">i</span>, 10,) confounded them.” <cite>—Liddle &amp; Scott in <abbr>voc.</abbr></cite> <a href="book-5.xhtml#noteref-47" epub:type="backlink">↩</a></p>
+					<p>“<i xml:lang="grc">ἐντελέχεια</i>, the actuality of a thing, as opposed to simple capability or potentiality (<i xml:lang="grc">δύναμις</i>); a philosophic word invented by Aristotle.⁠— … quite distinct from <i xml:lang="grc">ἐνδελέχεια</i>, though Cicero (<i epub:type="se:name.publication.book">Tusculan Disputations</i> <span epub:type="z3998:roman">i</span>, 10,) confounded them.” <cite>—Liddle and Scott in <abbr>voc.</abbr></cite> <a href="book-5.xhtml#noteref-47" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-48" epub:type="endnote">
 					<p>From <i xml:lang="grc">θεῖος</i> “divine,” and <i xml:lang="grc">φράσις</i> “diction.” <a href="book-5.xhtml#noteref-48" epub:type="backlink">↩</a></p>
@@ -277,7 +277,7 @@
 					<p>This is a pun upon the similarity of Athlias’s name to the Greek adjective <i xml:lang="grc">ἄθλιος</i>, which signifies miserable. <a href="book-6.xhtml#noteref-60" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-61" epub:type="endnote">
-					<p>The ἱερομνήμονες were the sacred secretaries or recorders sent by each Amphictyonic state to the council along with their πυλαγόρας, (the actual deputy or minister). <cite>—Liddle &amp; Scott, <i epub:type="se:name.publication.book">Greek &amp; English Lexicon</i>, in <abbr class="eoc">voc.</abbr></cite> <a href="book-6.xhtml#noteref-61" epub:type="backlink">↩</a></p>
+					<p>The ἱερομνήμονες were the sacred secretaries or recorders sent by each Amphictyonic state to the council along with their πυλαγόρας, (the actual deputy or minister). <cite>—Liddle and Scott, <i epub:type="se:name.publication.book">Greek and English Lexicon</i>, in <abbr class="eoc">voc.</abbr></cite> <a href="book-6.xhtml#noteref-61" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-62" epub:type="endnote">
 					<p>There is a pun here. <i xml:lang="grc">Χείρων</i> is the word used for worse. Chiron was also the most celebrated of the Centaurs, the tutor of Achilles. <a href="book-6.xhtml#noteref-62" epub:type="backlink">↩</a></p>
@@ -323,7 +323,7 @@
 					<p>This is a pun on the similarity of the sound, Tegea, to <i xml:lang="grc">τέγος</i>, a brothel. <a href="book-6.xhtml#noteref-72" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-73" epub:type="endnote">
-					<p>The Greek is <i xml:lang="grc">ἔρανον αἰτούμενος πρὸς τὸν ἐρανάρχην ἔφη</i>⁠—<i xml:lang="grc">ἔρανος</i> was not only a subscription or contribution for the support of the poor, but also a club or society of subscribers to a common fund for any purpose, social, commercial, or charitable, or especially political. … On the various <i xml:lang="grc">ἔρανοι</i>, <span epub:type="z3998:roman">v</span> Böckh, <i epub:type="se:name.publication.book">Public Economy</i> <span epub:type="z3998:roman">i</span>, 328. <abbr>Att.</abbr> <abbr>Process.</abbr> <abbr>p.</abbr> 540, <abbr>s.</abbr> 99. Liddle &amp; Scott in <abbr>voc.</abbr> <i xml:lang="grc">ἔρανος</i>. <a href="book-6.xhtml#noteref-73" epub:type="backlink">↩</a></p>
+					<p>The Greek is <i xml:lang="grc">ἔρανον αἰτούμενος πρὸς τὸν ἐρανάρχην ἔφη</i>⁠—<i xml:lang="grc">ἔρανος</i> was not only a subscription or contribution for the support of the poor, but also a club or society of subscribers to a common fund for any purpose, social, commercial, or charitable, or especially political. … On the various <i xml:lang="grc">ἔρανοι</i>, <span epub:type="z3998:roman">v</span> Böckh, <i epub:type="se:name.publication.book">Public Economy</i> <span epub:type="z3998:roman">i</span>, 328. <abbr>Att.</abbr> <abbr>Process.</abbr> <abbr>p.</abbr> 540, <abbr>s.</abbr> 99. Liddle and Scott in <abbr>voc.</abbr> <i xml:lang="grc">ἔρανος</i>. <a href="book-6.xhtml#noteref-73" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-74" epub:type="endnote">
 					<p>Homer, <i epub:type="se:name.publication.poem">Iliad</i> Γ, 65. <a href="book-6.xhtml#noteref-74" epub:type="backlink">↩</a></p>
@@ -483,7 +483,7 @@
 					</p>
 				</li>
 				<li id="note-95" epub:type="endnote">
-					<p>“<i xml:lang="grc">Ὑποτελὶς</i>, a name given by Herillus in Diogenes Laërtius to a man’s natural talents, <abbr>etc.</abbr>, which ought all to be subordinate to the attainment of the chief good.” <cite>—Liddle &amp; Scott in <abbr class="eoc">voc.</abbr></cite> <a href="book-7.xhtml#noteref-95" epub:type="backlink">↩</a></p>
+					<p>“<i xml:lang="grc">Ὑποτελὶς</i>, a name given by Herillus in Diogenes Laërtius to a man’s natural talents, <abbr>etc.</abbr>, which ought all to be subordinate to the attainment of the chief good.” <cite>—Liddle and Scott in <abbr class="eoc">voc.</abbr></cite> <a href="book-7.xhtml#noteref-95" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-96" epub:type="endnote">
 					<p>From <i xml:lang="grc">φρέαρ</i>, a well, and <i xml:lang="grc">ἀντλέω</i> to draw water. <a href="book-7.xhtml#noteref-96" epub:type="backlink">↩</a></p>
